--- a/index.html
+++ b/index.html
@@ -103,8 +103,17 @@
       </svg>
       </button>
     </div>
+    <div class="modal-input hide">
+      <form >
+        <div class="input-wrapper">
+          <label for="inputMinutes">Minutos</label>
+          <input type="number" id="inputMinutes">
+          <button class="defineMinutesButton">Definir</button>
+        </div>
+       
+      </form>
+    </div>
   </main>  
-
   <footer>
     <button class="sound-on">
       <svg
