modularização do projeto, criado arquivo para funcionalidades do timer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Pomodoro</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <script src="./script.js"  type="module" defer></script>
 </head>
 <body>
   <main>
@@ -180,5 +179,6 @@
     </svg>
     </button>
   </footer>
+  <script src="./script.js" type="module"> </script>
 </body>
 </html>
