--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
     </svg>
     </button>
   </footer>
-  <script src="./script.js" type="module"> </script>
+  <script src="./js/script.js" type="module"> </script>
 </body>
 </html>
