--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pomodoro</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -114,7 +115,7 @@
     </div>
   </main>  
   <footer>
-    <button class="sound-on">
+    <button class="sound-on hide">
       <svg
           width="64"
           height="64"
@@ -142,7 +143,7 @@
           />
         </svg>
     </button>
-    <button class="sound-off hide">
+    <button class="sound-off">
       <svg
       width="64"
       height="64"
